framec_tests/language_specific/rust/v3_outline/negative/pending/missing_brace.frm
@target rust

system S {
    actions:
        do_it() 
}
